# matplotlib_popup

./: .gitignore  README.md  matplotlib_popup.py  matplotlib_popup.txt  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/vi_plot_lib/: __init__.py  plot.py
